--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase": "^10.3.1",
     "lightbox.js-react": "^0.6.4",
     "next": "13.4.2",
     "postcss": "8.4.23",
