--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "firebase": "^10.3.1",
